--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <DOCTYPE html>
 <html>
   <head> <title>Status</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   </head>
   
   <body>
