--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   </head>
   
   <body>
+  <br><br>
+  <center>
     <div class="progress" style="height:25px">
       <div class="progress-bar bg-info progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style=" width : 50%">
+      </center>
 
       </div>
     </div>
